// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Child handles empty titles appropriately 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-i4bv87-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        -
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 childlist__pid css-u78q51-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;

exports[`Child renders a thumbnail 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-i4bv87-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        ajax-loaded title
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      ObjectThumbnail: {"pid":"foo:123"}
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 childlist__pid css-u78q51-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;

exports[`Child renders child counts 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-i4bv87-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        ajax-loaded title
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      ObjectChildCounts:{"pid":"foo:123"}
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 childlist__pid css-u78q51-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;

exports[`Child renders thumbnail and child counts 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-i4bv87-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        ajax-loaded title
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      ObjectThumbnail: {"pid":"foo:123"}
      ObjectChildCounts:{"pid":"foo:123"}
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 childlist__pid css-u78q51-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;

exports[`Child renders using ajax-loaded data 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-i4bv87-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        ajax-loaded title
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1 childlist__pid css-u78q51-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-none css-116ifgy-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;
